fix card stars position on mobile

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -80,6 +80,7 @@ a {
 	flex-wrap: wrap;
 	gap: 3rem;
 	.card {
+		position: relative;
 		box-shadow: 0px 0px 10px 2px rgba(255, 255, 255, 0.4);
 		border-radius: 20px;
 		width: 290px;
